# DevOps-Suite-Manager

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.user.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docker/: entrypoint.sh
docs/: ROADMAP.md  rbac-okta.md
docs/cli/: README.md  exit-codes.md
docs/cli/_generated/: credential.md  db.md  docs.md  folder.md  guacamole.md  org.md  pipelines.md  secret.md  top-level.md  user.md
docs/cli/prose/: credential.md  db.md  docs.md  folder.md  guacamole.md  org.md  pipelines.md  secret.md  top-level.md  user.md
dosm/: __main__.py  bootstrap.py  cli.py  config.py  db.py  main.py  migrations.py  models.py
dosm/agent/: __init__.py  actions.py  prompt.py  queries.py  routes.py
dosm/applications/: __init__.py  repo.py  routes.py
dosm/auth/: __init__.py  deps.py  okta.py  prefs.py  rbac.py  routes.py  session.py  tenancy.py
dosm/certs/: __init__.py  routes.py  scanner.py
dosm/certs/sources/: __init__.py  aws_acm.py  azure_kv.py  base.py  creds.py  gcp_certmgr.py  mock.py
dosm/confluence/: __init__.py  client.py  html.py  poller.py  repo.py  routes.py  sync.py
dosm/credentials/: __init__.py  access.py  dynamic.py  routes.py
dosm/directory/: __init__.py  sync.py
dosm/directory/adapters/: __init__.py  mock.py  winrm_jumpbox.py
dosm/docs_index/: __init__.py  applications.py  chunker.py  cli_reference.py  embedder.py  indexer.py  markdown.py  parsers.py  routes.py  search.py  store.py  vault.py  watcher.py
dosm/ftp/: __init__.py  base.py  ftp_backend.py  ftp_client.py  routes.py  service.py  sftp_backend.py  socks.py
dosm/guacamole/: __init__.py  auth_json.py  builder.py  client.py  routes.py
dosm/hosts/: __init__.py  repo.py  routes.py
dosm/inventory/: __init__.py  routes.py
dosm/jumps/: __init__.py  connections.py  tunnels.py
dosm/llm/: __init__.py  ollama.py  retrieval.py  routes.py
dosm/metrics/: __init__.py  local_snapshot.py  routes.py  sources.py
dosm/modules/: __init__.py  contract.py  loader.py  registry.py  routes.py
dosm/modules/builtin/system_info/: __init__.py  module.yaml  routes.py  snapshot.py
dosm/monitoring/: __init__.py  repo.py  routes.py
dosm/monitoring/adapters/: __init__.py  base.py  datadog.py  dynatrace.py  prometheus.py  servicenow.py
dosm/network/: __init__.py  executor.py  routes.py  scanner.py
dosm/org/: __init__.py  routes.py
dosm/pipelines/: __init__.py  access.py  inputs.py  payload_access.py  poller.py  repo.py  routes.py
dosm/pipelines/adapters/: __init__.py  awx.py  azure_devops.py  base.py  github.py  octopus.py  terraform_cloud.py
dosm/recording/: __init__.py  events.py  journal.py  routes.py  state.py
dosm/secrets/: __init__.py  base.py  factory.py  local.py  vault.py
dosm/settings/: __init__.py  cli_catalog.py  routes.py
dosm/terminals/: __init__.py  discover.py  pty_bridge.py  recorder.py  routes.py  runas.py
dosm/web/static/: app.css  explorer.js
dosm/web/templates/: _org_tree.html  _shell.html  auth_base.html  base.html  certs.html  certs_detail.html  certs_sources.html  health.html  index.html  monitoring.html  monitoring_coverage.html  monitoring_source_form.html  monitoring_sources.html
dosm/web/templates/applications/: index.html
dosm/web/templates/auth/: login.html
dosm/web/templates/chat/: conversation.html  list.html
dosm/web/templates/credentials/: detail.html  explorer.html  form.html  list.html  mine.html
dosm/web/templates/docs/: application_detail.html  applications.html  editor.html  import.html  list.html  search.html  view.html
dosm/web/templates/ftp/: browser.html  explorer.html  index.html
dosm/web/templates/guacamole/: connect.html
dosm/web/templates/hosts/: detail.html  explorer.html  form.html  list.html
dosm/web/templates/inventory/: explorer.html
dosm/web/templates/modules/: list.html
dosm/web/templates/network/: map_detail.html  map_list.html  map_new.html  port_checker.html  port_library.html
dosm/web/templates/org/: configure.html  detail.html  (+3 more)
guacamole/: Dockerfile  db.Dockerfile  docker-entrypoint.sh  dosm-disconnect.js
guacamole/initdb/: README.md
scripts/: gen_cli_docs.py  setup-guacamole.ps1  setup-guacamole.sh  start.ps1  start.sh  stop.ps1  stop.sh  update.sh
tests/: _ftp_helpers.py  conftest.py  test_agent.py  test_auth.py  test_cert_sources.py  test_confluence.py  test_connect_errors.py  test_docs.py  test_docs_store.py  test_dynamic_credentials.py  test_ftp.py  test_hosts.py  test_monitoring_cache.py  test_okta.py  test_org_explorer.py  test_ping_rdgateway.py  test_pipeline_payloads.py  test_pipelines.py  test_rbac.py  test_rbac_settings.py  test_role_migration.py  test_secrets.py  test_tenancy.py
tests/unit/: test_pipeline_inputs.py  test_utils.py
(+19 files in other folders)
