[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dosm"
version = "0.1.0"
description = "DevOps Operations Suite Manager: modular on-prem ops console with an embedded LLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DOSM" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "typer>=0.13",
    "rich>=13.9",
    "sqlalchemy>=2.0",
    "bcrypt>=4.0",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.20",
    "cryptography>=43",
    "hvac>=2.3",
    "psutil>=6.1",
    "websockets>=13",
    'pywinpty>=2.0; sys_platform == "win32"',
    "numpy>=1.26",
    "pypdf>=4.3",
    "fastembed>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[project.scripts]
dosm = "dosm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["dosm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
