[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dosm"
version = "0.1.0"
description = "DevOps Operations Suite Manager: modular on-prem ops console with an embedded LLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DOSM" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "typer>=0.13",
    "rich>=13.9",
    "sqlalchemy>=2.0",
    "bcrypt>=4.0",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.20",
    "cryptography>=43",
    "hvac>=2.3",
    "psutil>=6.1",
    "websockets>=13",
    'pywinpty>=2.0; sys_platform == "win32"',
    "numpy>=1.26",
    "pypdf>=4.3",
    "fastembed>=0.4",
    "httpx>=0.27",
    "asyncssh>=2.18",
    "pywinrm>=0.5",
    "mammoth>=1.6",
    "markdown-it-py>=3.0",
    "nh3>=0.2",
    "watchdog>=4.0",
    # Phase 21b - Okta OIDC SSO: discovery, token exchange, and offline ID-token
    # validation against the provider's JWKS.
    "authlib>=1.3,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    # FTP/FTPS test server for the file-transfer integration tests. pyftpdlib's
    # TLS handler needs pyOpenSSL. Test-only - not a runtime dependency.
    "pyftpdlib>=1.5",
    "pyopenssl>=24.0",
]
# Cloud certificate sources (Phase 19) - opt-in, lazily imported. Install only
# the cloud(s) you track certs in, e.g. pip install 'dosm[azure]'.
azure = ["azure-identity>=1.16", "azure-keyvault-certificates>=4.8"]
aws = ["boto3>=1.34"]
gcp = ["google-cloud-certificate-manager>=1.7"]
# SMB network-drive docs source (Phase: docs SMB). Pure-Python SMB2/3 client,
# lazily imported only when docs_index.source = "smb".
smb = ["smbprotocol>=1.12"]
# Confluence space listeners (Phase 26). httpx (core) does the REST calls;
# markdownify converts page HTML to markdown. Lazily imported with a tag-strip
# fallback, so it's optional - install with pip install 'dosm[confluence]'.
confluence = ["markdownify>=0.11"]

[project.scripts]
dosm = "dosm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["dosm"]

# Bundle the generated CLI reference inside the wheel so the runtime can
# install it into $DOSM_HOME/docs/_dosm-cli/ on dosm init / dosm docs
# install-cli-reference. Hand-written prose lives outside the wheel -
# only the spliced output is shipped.
[tool.hatch.build.targets.wheel.force-include]
"docs/cli/_generated" = "dosm/cli_docs/_generated"
"docs/cli/exit-codes.md" = "dosm/cli_docs/exit-codes.md"
"docs/cli/README.md" = "dosm/cli_docs/README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",  # FastAPI Depends() in function defaults is intentional
    "B904",  # raise-without-from - too noisy in CLI/route error handlers
    "B905",  # zip() without strict= - intentional in pairing loops
    "B027",  # empty abstract method without decorator - ABC pattern
]
# Test files import fixtures via function args - ruff shouldn't flag unused imports there.
# LLM tool definition files have long description strings - E501 would require ugly wrapping.
# PowerShell adapter embeds full PS commands that cannot be split.
per-file-ignores = { "tests/**" = ["F401", "F811"], "dosm/agent/actions.py" = ["E501"], "dosm/agent/queries.py" = ["E501"], "dosm/directory/adapters/winrm_jumpbox.py" = ["E501"], "dosm/metrics/sources.py" = ["E501"] }
